# shap

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FINAL_LSTM_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LSTM_HANDLER_FIX.md  MANIFEST.in  PYTORCH_SEQUENCE_LIMITATION.md  README.md  README.rst  README_CUDA.md  TENSORFLOW_LSTM.md  TensorFlow_LSTM_Status.md  WHILE_LOOP_INVESTIGATION_SUMMARY.md  _kernel_lib.cp312-win_amd64.pyd  _kernel_lib.cp313-win_amd64.pyd  _kernel_lib.cp314-win_amd64.pyd  all_warnings.txt  analyze_hidden_state_flow.py  appveyor.yml  asv.conf.json  before-deploy.ps1  bugreport-2033-RP1A.200720.012-2024-06-21-04-39-47-dumpstate_log-20811.txt  build_wheels.py  capture_warnings.py  check_between_tensors.py  debug_2timestep.py  debug_3timestep.py  debug_between_tensors.py  debug_hidden_state_gradients.py  debug_pytorch_sequence_error.py  (+69 more)
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/workflows/: build_gpu.yml  build_wheels.yml  codeql-analysis.yml  lint.yml  nightly_wheels.yml  no-response.yml  run_notebooks.yml  run_notebooks_nbtest.yml  run_tests.yml  stale_issues.yml  test_cuda_build.yml  test_js.yml
baby_shap/: __init__.py  _explanation.py  links.py
baby_shap/explainers/: __init__.py  _kernel.py
baby_shap/plots/: __init__.py  _beeswarm.py  _decision.py  _force.py  _force_matplotlib.py  _group_difference.py  _monitoring.py  _partial_dependence.py  _scatter.py  _utils.py
baby_shap/utils/: _clustering.py  _general.py  _legacy.py
benchmarks/: benchmarks_clustering.py
bugs/fix_lstm/: compare_gru_rnn_layers_for_ops.py  dummy.py  lstm.md  lstm_chatgpt.py  lstm_chatgpt_gru.py  lstm_chatgpt_rnn.py  lstm_example_andy.py  lstm_test.h5  lstm_with_shap_3344.py  lstm_with_shap_3344_mlm.py  lstm_with_shap_3344_other.py  nonlinear_lstm_example_chatgpt.py  todo.md
build_tools/github/: upload_anaconda.sh
claude_interface/: BUG_TRACKER.md
data/: CommViolPredUnnormalizedData.txt  NHANESI_subset_X.csv  NHANESI_subset_y.csv  NHANESI_y.csv  a1a.svmlight  adult.data  imagenet50_labels.csv
docs/: Makefile  Text examples.md  api.rst  api_examples.rst  benchmarks.rst  conf.py  contributing.rst  examples.rst  genomic_examples.rst  image_examples.rst  index.rst  make.bat  overviews.rst  release_notes.rst  requirements-docs.txt  tabular_examples.rst  text_examples.rst
docs/_templates/: layout.html
docs/artwork/: california_dataset.html  california_instance.html  logo.ai  shap_logo_scratch.ai
docs/notebooks/: Census income classification with Keras.html  Census income classification with LightGBM.html  Census income classification with XGBoost.html  Census income classification with scikit-learn.html  Census+income+classification+with+Keras.html  Census+income+classification+with+LightGBM.html  Census+income+classification+with+XGBoost.html  Census+income+classification+with+scikit-learn.html  Front Page DeepExplainer MNIST Example.html  ImageNet VGG16 Model with Keras.html  ImageNet+VGG16+Model+with+Keras.html  Iris classification with scikit-learn.html  Iris+classification+with+scikit-learn.html  (+4 more)
include/: partition.h
javascript/: .npmignore  Makefile  README.md  babel.config.js  color-set.js  developer-docs.md  index.jsx  jest.config.js  package-lock.json  package.json  publish-docs.md  random-explanation.js  test_bundle.js  webpack.config.js
notebooks/: Airline Tweet Sentiment Analysis.ipynb  Basic SHAP Interaction Value Example in XGBoost.ipynb  Census income classification with Keras.ipynb  Census income classification with LightGBM.ipynb  Census income classification with XGBoost.ipynb  Census income classification with scikit-learn.ipynb  Cumulative SHAP (Text to Text).ipynb  Diabetes regression.ipynb  Exact.ipynb  Exmaple_2.ipynb  Figuring_out_permutations.ipynb  Force Plot Colors.ipynb  Front page example (LightGBM).ipynb  Front page example (XGBoost).ipynb  Front page example with XGBoost.ipynb  Gain calculations and user study for AAAI TreeSHAP paper.ipynb  ImageNet VGG16 Model with Keras.ipynb  Iris classification with scikit-learn.ipynb  Iris classification.ipynb  Lending agent game data generator.ipynb  Method efficiency comparison.ipynb  NHANES I Survival Model.ipynb  Non-binary_tree_masking.ipynb  Python Version of Tree SHAP.ipynb  Rewriting.ipynb  Rewriting2electricboogalooo.ipynb  Scatter Density vs. Violin Plot Comparison.ipynb  Scratch.ipynb  Simple California Demo With New Partition.ipynb  Simple Kernel SHAP.ipynb  Simple test.ipynb  Sparse simple non-linear.ipynb  The monotonicity axiom implies the symmetry axiom for Shapley values.ipynb  Understanding Tree SHAP for Simple Models.ipynb  Untitled.ipynb  Visualising.ipynb  requirements.txt
notebooks_assert/: Understanding_Tree_SHAP_for_Simple_Models_chebyshev_0.95_10.ipynb
poc_nanobind/: CMakeLists.txt  build.bat  build_log.txt  pyproject.toml  test_cpp_vs_numba.py
scratch/: repro_3553.py  repro_3553_v2.py
scripts/: extract_lower_bounds.py  extract_oldest_supported.py  run_notebooks_timeouts.py
shap/: .pylintrc2  __init__.py  __init__.pyi  _cext.cc  _cutils.pyi  _explanation.py  _order.py  _serializable.py  common.py  datasets.py  exceptions.py  explainer.py  links.py  plots.py  py.typed  setup.py  shap.py  tree_shap.h
shap/cext/: _cext.cc  (+9 more)
src/: bind.cpp  partition.cpp
stubs/: _kernel_lib.pyi
tests/: README.md  __init__.py  conftest.py  datasets_to_cache.py  fixtures.py  gpu_tree_tests.ipynb  test_basic.py  test_bug121101.py  test_compute_time.py  test_cutils.py  test_datasets.py  test_deep.py  test_deep_lstm.py  test_explanation.py  test_gradient.py  test_image_utils.py  test_install.py  test_kernel.py  test_lazy_imports.py  test_linear.py  test_links.py  test_modernized_tutorials.py  test_numpy_rng_warnings.py  test_sampling.py  test_serializable.py  test_show_progress.py  test_tree.py  test_warnings_stacklevel.py
(+782 files in other folders)
